--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/destinations-form/destinations-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/destinations-form/destinations-form.component.html
@@ -1,1 +1,92 @@
-<p>destinations-form works!</p>
+<p-toast position="top-right"></p-toast>
+<div class="admin-page p-3">
+  <p-card
+    [header]="editMode ? 'Update Apartment' : 'New Apartment'"
+    [subheader]="editMode ? '' : 'Create A new Apartment'"
+  >
+    <p-toolbar>
+      <div class="p-toolbar-group-left"></div>
+      <div class="p-toolbar-group-right">
+        <p-button
+          [label]="editMode ? 'Update' : 'Save'"
+          icon="pi pi-check"
+          [styleClass]="
+            editMode ? 'p-button-warning mr-2' : 'p-button-info mr-2'
+          "
+          (click)="onSubmit()"
+        ></p-button>
+
+        <p-button
+          icon="pi pi-times"
+          styleClass="p-button-danger"
+          (click)="onCancle()"
+        ></p-button>
+      </div>
+    </p-toolbar>
+
+    <div class="p-grid" *ngIf="!loading">
+      <div class="col-12">
+        <form [formGroup]="form">
+          <div class="p-fluid formgrid grid">
+            <div class="p-field col-4" [class]="editMode ? 'hidden' : ''">
+              <label for="id">ID</label>
+              <input id="id" type="text" pInputText formControlName="id" />
+            </div>
+            <div class="p-field col-8">
+              <label for="address">Địa chỉ</label>
+
+              <input
+                id="address"
+                type="text"
+                pInputText
+                formControlName="address"
+              />
+              <small *ngIf="desForm.address.invalid && isSubmit" class="p-error"
+                >Địa chỉ is required</small
+              >
+            </div>
+            <div class="p-field col-4">
+              <label for="address">Loại địa điểm</label>
+              <p-dropdown
+                optionLabel="name"
+                optionValue="id"
+                [options]="status"
+                placeholder="Select Status"
+                formControlName="idPlaceType"
+                [showClear]="true"
+                [filter]="true"
+                filterBy="name"
+              ></p-dropdown>
+              <small
+                *ngIf="desForm.idPlaceType.invalid && isSubmit"
+                class="p-error"
+                >Status is required</small
+              >
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="p-grid" *ngIf="loading">
+      <div class="col-12">
+        <form [formGroup]="form">
+          <div class="p-fluid formgrid grid">
+            <div class="p-field col-4" [class]="editMode ? 'hidden' : ''">
+              <label for="id">ID</label>
+              <p-skeleton></p-skeleton>
+            </div>
+            <div class="p-field col-8">
+              <label for="name">Địa chỉ</label>
+
+              <p-skeleton></p-skeleton>
+            </div>
+            <div class="p-field col-4">
+              <label for="status">Loại địa điểm</label>
+              <p-skeleton></p-skeleton>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </p-card>
+</div>
