--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/apartments/apartments.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/apartments/apartments.component.html
@@ -57,7 +57,7 @@
               <tr>
                 <th class="hidden">ID</th>
                 <th pSortableColumn="name">
-                  Tên loại điểm du lịch <p-sortIcon field="name"></p-sortIcon>
+                  Tên loại điểm <p-sortIcon field="name"></p-sortIcon>
                 </th>
                 <th>
                   Trạng Thái
