--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/account-business-form/account-business-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/account-business-form/account-business-form.component.html
@@ -44,7 +44,8 @@
                 formControlName="phone"
                 type="text"
                 pInputText
-                maxlength="10"
+                [maxlength]="10"
+                [max]="10"
               />
               <small
                 *ngIf="businessForm.phone.invalid && isSubmit"
