--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/agencies-form/agencies-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/agencies-form/agencies-form.component.html
@@ -33,7 +33,7 @@
           <div class="p-field col-4">
             <label for="name">Số điện thoại</label>
             <br />
-            <p>{{ agency?.phone }}</p>
+            <p>{{ agency?.phoneNumber }}</p>
           </div>
           <div class="p-field col-4">
             <label for="status">Status</label>
