fix table content and do vehicle type

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/destinations-form/destinations-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/destinations-form/destinations-form.component.html
@@ -55,7 +55,7 @@
                     optionLabel="name"
                     optionValue="id"
                     [options]="desStatus"
-                    placeholder="Select Status"
+                    placeholder="Chọn loại địa điểm"
                     formControlName="idPlaceType"
                     [showClear]="true"
                     [filter]="true"
@@ -73,7 +73,7 @@
                     optionLabel="name"
                     optionValue="id"
                     [options]="status"
-                    placeholder="Select Status"
+                    placeholder="Chọn trạng thái"
                     formControlName="status"
                     [showClear]="true"
                     filterBy="name"
