--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/vehicle-type/vehicle-type.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/vehicle-type/vehicle-type.component.html
@@ -1,1 +1,119 @@
-<p>vehicle-type works!</p>
+<p-toast position="top-right"></p-toast>
+<div class="admin-page p-3">
+  <p-card header="Địa điểm du lịch" subheader="Danh sách các địa điểm du lịch">
+    <p-toolbar styleClass="p-mb-4">
+      <ng-template pTemplate="left">
+        <span class="p-input-icon-right">
+          <i class="pi pi-search"></i>
+          <input
+            pInputText
+            type="text"
+            (input)="dt.filterGlobal(getValue($event), 'contains')"
+            placeholder="Tìm Kiếm..."
+          />
+        </span>
+        <span *ngFor="let item of status">
+          <button
+            pButton
+            type="button"
+            [label]="item.lable"
+            [value]="item.id"
+            (click)="onChangeStatus(item.id)"
+            class="p-button-outlined p-button-info p-button-text m-1"
+          ></button>
+        </span>
+      </ng-template>
+      <!-- <ng-template pTemplate="right">
+        <button
+          pButton
+          pRipple
+          label="New"
+          icon="pi pi-plus"
+          class="p-button-success p-mr-2"
+          (click)="newVehicleType()"
+        ></button>
+      </ng-template> -->
+    </p-toolbar>
+    <div class="mt-5"></div>
+
+    <hr />
+    <div class="grid">
+      <div class="col-12">
+        <p-table
+          #dt
+          [value]="vehicleType"
+          [rows]="10"
+          [showCurrentPageReport]="true"
+          [rowsPerPageOptions]="[10, 20, 50]"
+          [paginator]="true"
+          [filterDelay]="0"
+          [globalFilterFields]="['address', 'apartmentName']"
+          styleClass="p-datatable-sm"
+          responsiveLayout="scroll"
+        >
+          <ng-template pTemplate="header">
+            <tr>
+              <th class="hidden">ID</th>
+              <th pSortableColumn="address">
+                Loại Tàu <p-sortIcon field="address"></p-sortIcon>
+              </th>
+              <th>Trạng thái</th>
+              <!-- <th></th> -->
+            </tr>
+          </ng-template>
+
+          <ng-template pTemplate="body" let-vehicleType>
+            <tr *ngIf="loading">
+              <td><p-skeleton></p-skeleton></td>
+              <td><p-skeleton></p-skeleton></td>
+              <!-- <td class="flex">
+                <p-skeleton
+                  shape="circle"
+                  size="3rem"
+                  styleClass="p-mr-2"
+                ></p-skeleton>
+                <p-skeleton
+                  shape="circle"
+                  size="3rem"
+                  styleClass="p-mr-2"
+                ></p-skeleton>
+              </td> -->
+            </tr>
+            <tr *ngIf="!loading">
+              <td class="hidden">{{ vehicleType.id }}</td>
+              <td>{{ vehicleType.name }}</td>
+              <td class="p-ai-center p-pl-2">
+                <p-tag
+                  [severity]="vehicleTypeStatus[vehicleType.status].color"
+                  [value]="vehicleTypeStatus[vehicleType.status].lable"
+                ></p-tag>
+              </td>
+              <!-- <td>
+                <button
+                  pButton
+                  pRipple
+                  icon="pi pi-pencil"
+                  class="p-button-rounded p-button-success mr-2"
+                  (click)="editVehicleType(vehicleType.id)"
+                ></button>
+
+                <button
+                  pButton
+                  pRipple
+                  icon="pi pi-ban"
+                  class="p-button-rounded p-button-warning"
+                  (click)="deleteVehicleType(vehicleType.id)"
+                ></button>
+              </td> -->
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </div>
+  </p-card>
+</div>
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+></p-confirmDialog>
