--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/ticket-type-form/ticket-type-form.component.html
@@ -1,1 +1,146 @@
-<p>ticket-type-form works!</p>
+<p-toast position="top-right"></p-toast>
+<div class="admin-page p-3">
+  <p-card header="Chỉnh sửa thông tin loại vé" class="p-shadow-14">
+    <p-toolbar>
+      <div class="p-toolbar-group-left">Xát nhận thông tin loại vé</div>
+      <div class="p-toolbar-group-right">
+        <p-button
+          icon="pi pi-times"
+          styleClass="p-button-danger"
+          (click)="onCancle()"
+        ></p-button>
+      </div>
+    </p-toolbar>
+
+    <div class="p-grid" *ngIf="!loading">
+      <div class="col-12 mt-4">
+        <form>
+          <div class="p-fluid formgrid grid">
+            <div class="col-7">
+              <div class="grid">
+                <div class="p-field col-6 mb-3">
+                  <label for="name">Hạng vé</label>
+                  <input
+                    id="name"
+                    type="text"
+                    pInputText
+                    formControlName="name"
+                  />
+                </div>
+                <div class="p-field col-6 mb-3">
+                  <label for="price">Giá vé</label>
+
+                  <input
+                    id="price"
+                    formControlName="price"
+                    type="text"
+                    pInputText
+                  />
+                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
+                  >Tittle is required</small
+                > -->
+                </div>
+                <div class="p-field col-6">
+                  <label for="serviceFeePercentage">Phí dịch vụ(%)</label>
+
+                  <input
+                    id="serviceFeePercentage"
+                    formControlName="serviceFeePercentage"
+                    type="text"
+                    pInputText
+                  />
+                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
+                  >Tittle is required</small
+                > -->
+                </div>
+                <div class="p-field col-6">
+                  <label for="status">Trạng thái</label>
+                  <p-dropdown
+                    optionLabel="name"
+                    optionValue="id"
+                    placeholder="Select Status"
+                    formControlName="status"
+                    [showClear]="true"
+                  ></p-dropdown>
+                  <!-- <small *ngIf="tourForm.status.invalid && isSubmit" class="p-error"
+                  >Status is required</small
+                > -->
+                </div>
+                <div class="p-field col-6"></div>
+                <div class="p-field col-6 mt-5">
+                  <button
+                    pButton
+                    pRipple
+                    type="button"
+                    icon="pi pi-check"
+                    label="Confirm"
+                    class="p-button-raised p-button-help p-button-text"
+                  ></button>
+                </div>
+              </div>
+            </div>
+            <div class="col-5 p-shadow-14">
+              <p-card subheader="Thông tin vé tàu">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Provident repellendus laborum impedit quis cupiditate aliquam
+                  corporis temporibus rerum praesentium tempora perspiciatis
+                  culpa blanditiis quo nesciunt ratione laboriosam quidem, eius
+                  dignissimos.
+                </p>
+              </p-card>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="p-grid" *ngIf="loading">
+      <div class="col-12 mt-4">
+        <form>
+          <div class="p-fluid formgrid grid">
+            <div class="col-7">
+              <div class="grid">
+                <div class="p-field col-6 mb-3">
+                  <label for="name">Hạng vé</label>
+                  <p-skeleton></p-skeleton>
+                </div>
+                <div class="p-field col-6 mb-3">
+                  <label for="price">Giá vé</label>
+
+                  <p-skeleton></p-skeleton>
+                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
+                  >Tittle is required</small
+                > -->
+                </div>
+                <div class="p-field col-6">
+                  <label for="serviceFeePercentage">Phí dịch vụ(%)</label>
+
+                  <p-skeleton></p-skeleton>
+                  <!-- <small *ngIf="tourForm.tittle.invalid && isSubmit" class="p-error"
+                  >Tittle is required</small
+                > -->
+                </div>
+                <div class="p-field col-6">
+                  <label for="status">Trạng thái</label>
+                  <p-skeleton></p-skeleton>
+                  <!-- <small *ngIf="tourForm.status.invalid && isSubmit" class="p-error"
+                  >Status is required</small
+                > -->
+                </div>
+                <div class="p-field col-6"></div>
+                <div class="p-field col-6 mt-5">
+                  <p-skeleton></p-skeleton>
+                </div>
+              </div>
+            </div>
+            <div class="col-5 p-shadow-14">
+              <p-card subheader="Thông tin vé tàu">
+                <p-skeleton width="24rem" height="10rem"></p-skeleton>
+              </p-card>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </p-card>
+</div>
