--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/pages.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/pages.component.html
@@ -1,5 +1,6 @@
 <!-- Sidenav -->
 <booking-yacht-sidebar></booking-yacht-sidebar>
 <div class="main-content">
+  <booking-yacht-nav-menu></booking-yacht-nav-menu>
   <router-outlet></router-outlet>
 </div>
