add animation navbar

--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/components/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
     >
       <img
         src="./assets/img/brand/logo-yacht.png"
-        class="navbar-brand-img"
+        class="navbar-brand-img animate__animated animate__fadeInUpBig"
         width="100%"
         alt="..."
       />
@@ -22,7 +22,7 @@
       id="sidenav-collapse-main"
     >
       <!-- Navigation -->
-      <ul class="navbar-nav">
+      <ul class="navbar-nav animate__animated animate__fadeInUpBig">
         <li
           *ngFor="let menuItem of menuItems"
           class="{{ menuItem.class }} nav-item"
