--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/nav-menu/nav-menu.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/shared/nav-menu/nav-menu.component.html
@@ -2,7 +2,7 @@
   <div class="nav-menu--content">
     <div class="grid">
       <div class="col-10"></div>
-      <div class="col-2 d-flex profile">
+      <div class="col-2 d-flex profile animate__animated animate__fadeInLeft">
         <p-chip
           label="Mr.Sang"
           style="font-size: 0.5rem"
