--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/ticket-type/ticket-type.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/ticket-type/ticket-type.component.html
@@ -1,6 +1,6 @@
 <p-toast position="top-right"></p-toast>
 <div class="admin-page p-3">
-  <p-card header="Địa điểm du lịch" subheader="Danh sách các địa điểm du lịch">
+  <p-card header="Loại vé">
     <p-toolbar styleClass="p-mb-4">
       <ng-template pTemplate="left">
         <span class="p-input-icon-right">
