--- a/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/ticket/ticket.component.html
+++ b/WebApp/booking-yacht/apps/booking-yacht/src/app/pages/ticket/ticket.component.html
@@ -1,6 +1,6 @@
 <p-toast position="top-right"></p-toast>
 <div class="admin-page p-3">
-  <p-card header="Địa điểm du lịch" subheader="Danh sách các địa điểm du lịch">
+  <p-card header="Danh sách vé">
     <p-toolbar styleClass="p-mb-4">
       <ng-template pTemplate="left">
         <span class="p-input-icon-right">
@@ -68,7 +68,9 @@
               <td class="hidden">{{ tickets.id }}</td>
               <td>{{ tickets.idOrderNavigation.agencyName }}</td>
               <td>{{ tickets.nameCustomer }}</td>
-              <td>thời gian</td>
+              <td>
+                {{ tickets.idOrderNavigation.dateOrder | date: 'dd/MM/yyyy' }}
+              </td>
               <td>{{ tickets.phone }}</td>
               <td>{{ tickets.price | currency }}</td>
 
